Created a Facebook class to abstract out even more Facebook code
- Salt wrote a comment about intellij's Kotlin linters & primary constructors
- Deleted the friends permission so that development can continue

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,10 +18,10 @@
         android:textSize="32sp"
         android:textStyle="bold"/>
 
-    <include
-        layout="@layout/button_facebook"
+    <com.savory.login.FacebookButton
+        android:id="@+id/facebook_button"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_alignParentBottom="true"/>
+        android:layout_alignParentBottom="true" />
 
 </RelativeLayout>
