Continue iterating on login
- Added moderately snarky flavor subtext
- Imported some Kotlin Square networking things
- Created the interface that represents a high level contract with the backend
- As of now, this interface only has the contract for logging in/registering created

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,13 +10,22 @@
 
     <TextView
         android:id="@+id/welcome_text"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:text="Welcome To Savory."
         android:textColor="@color/white"
         android:textSize="32sp"
         android:textStyle="bold"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/welcome_text"
+        android:layout_marginTop="4dp"
+        android:text="No cruft. Just food."
+        android:textColor="@color/white"
+        android:textSize="18sp"/>
 
     <com.savory.login.FacebookButton
         android:id="@+id/facebook_button"
