Implemented GridView with header & footer
Unfortunately, I couldn't find a way to get rid of padding on the left and rightmost photos in the grid because I am not a AOSP/Android UI wizard. I will take that 1 dp of padding in exchange for perfectly square images.

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -16,7 +16,9 @@
         android:id="@+id/profile_listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="invisible"
+        android:divider="@android:color/transparent"
+        android:listSelector="@android:color/transparent"
+        android:visibility="visible"
         tools:visibility="visible"/>
 
 </FrameLayout>
