--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
 
     <color name="white">#FFFFFF</color>
     <color name="facebook_blue">#3B5998</color>
+
+    <color name="light_grey">#DCDCDC</color>
 </resources>
