--- a/app/src/main/res/layout/places_cell.xml
+++ b/app/src/main/res/layout/places_cell.xml
@@ -13,7 +13,8 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_gravity="center_vertical"
-        android:background="@color/light_grey"/>
+        android:background="@color/light_grey"
+        android:scaleType="fitXY"/>
 
     <LinearLayout
         android:layout_width="match_parent"
