--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="facebook_blue">#3B5998</color>
 
     <color name="light_grey">#DCDCDC</color>
+    <color name="grey">#919191</color>
 </resources>
