--- a/app/src/main/res/layout/places_cell.xml
+++ b/app/src/main/res/layout/places_cell.xml
@@ -27,6 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="2dp"
+            android:textColor="@color/grey"
             android:textSize="28sp"
             tools:text="Pizza Hut"/>
 
@@ -34,6 +35,7 @@
             android:id="@+id/address_textview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/grey"
             android:textSize="20sp"
             tools:text="I prefer Domino's"/>
 
