--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -18,7 +18,7 @@
         android:layout_height="match_parent"
         android:divider="@android:color/transparent"
         android:listSelector="@android:color/transparent"
-        android:visibility="visible"
+        android:visibility="gone"
         tools:visibility="visible"/>
 
 </FrameLayout>
