--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,23 @@
 
     <color name="light_grey">#DCDCDC</color>
     <color name="grey">#848484</color>
+
+    <color name="app_red">#F44336</color>
+    <color name="dark_red">#D32F2F</color>
+    <color name="light_red">#E57373</color>
+
+    <color name="green">#4CAF50</color>
+    <color name="accent_green">#00C853</color>
+
+    <color name="half_white">#80FFFFFF</color>
+    <color name="white_80_percent">#CCFFFFFF</color>
+    <color name="dark_gray">#616161</color>
+    <color name="gray">#9E9E9E</color>
+    <color name="light_gray">#E0E0E0</color>
+
+    <color name="black">#000000</color>
+    <color name="shadow_black">#3D000000</color>
+    <color name="theater_black">#212121</color>
+
+    <color name="blue">#2196F3</color>
 </resources>
