--- a/app/src/main/res/layout/layout_generic_list.xml
+++ b/app/src/main/res/layout/layout_generic_list.xml
@@ -1,15 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?android:attr/actionBarSize"
+        android:background="@color/colorPrimary"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
     <ProgressBar
         android:id="@+id/progress_bar"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:layout_below="@id/toolbar"/>
 
     <ListView
         android:id="@+id/list_view"
@@ -18,6 +28,12 @@
         android:divider="@android:color/transparent"
         android:listSelector="@android:color/transparent"
         android:visibility="gone"
+        android:layout_below="@id/toolbar"
         tools:visibility="visible"/>
 
-</FrameLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_below="@id/toolbar"
+        android:background="@drawable/toolbar_shadow"/>
+</RelativeLayout>
