Added fitXY scaleType to photos_cell

--- a/app/src/main/res/layout/photos_cell.xml
+++ b/app/src/main/res/layout/photos_cell.xml
@@ -9,19 +9,22 @@
     <com.savory.ui.SquareImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="33"
         android:padding="1dp"
-        android:layout_weight="33"/>
+        android:scaleType="fitXY"/>
 
     <com.savory.ui.SquareImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="33"
         android:padding="1dp"
-        android:layout_weight="33"/>
+        android:scaleType="fitXY"/>
 
     <com.savory.ui.SquareImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="33"
         android:padding="1dp"
-        android:layout_weight="33"/>
+        android:scaleType="fitXY"/>
 
 </LinearLayout>
