--- a/app/src/main/res/layout/places_cell.xml
+++ b/app/src/main/res/layout/places_cell.xml
@@ -2,9 +2,10 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal"
+    android:id="@+id/parent"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="horizontal"
     android:gravity="center_vertical"
     android:padding="8dp"
     tools:ignore="ContentDescription, RtlHardcoded">
