--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,6 +22,7 @@
     <color name="dark_gray">#616161</color>
     <color name="gray">#9E9E9E</color>
     <color name="light_gray">#E0E0E0</color>
+    <color name="gray_300">#E0E0E0</color>
 
     <color name="black">#000000</color>
     <color name="shadow_black">#3D000000</color>
