--- a/app/src/main/res/layout/places_cell.xml
+++ b/app/src/main/res/layout/places_cell.xml
@@ -3,12 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/parent"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
     android:gravity="center_vertical"
     android:padding="8dp"
-    tools:ignore="ContentDescription, RtlHardcoded">
+    tools:ignore="ContentDescription, RtlHardcoded, SpUsage">
 
     <ImageView
         android:id="@+id/restaurant_thumbnail"
@@ -26,7 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
-            android:textSize="21sp"
+            android:textSize="19dp"
             android:layout_marginBottom="2dp"/>
 
         <TextView
@@ -34,6 +34,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/dark_gray"
-            android:textSize="17sp"/>
+            android:textSize="15dp"/>
+
+        <TextView
+            android:id="@+id/restaurant_categories"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/gray"
+            android:textSize="15dp"/>
     </LinearLayout>
 </LinearLayout>
