--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,6 +23,7 @@
     <color name="gray">#9E9E9E</color>
     <color name="light_gray">#E0E0E0</color>
     <color name="gray_300">#E0E0E0</color>
+    <color name="gray_100">#F5F5F5</color>
 
     <color name="black">#000000</color>
     <color name="shadow_black">#3D000000</color>
