--- a/app/src/main/res/layout/fragment_upload.xml
+++ b/app/src/main/res/layout/fragment_upload.xml
@@ -1,64 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="16dp">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <com.savory.ui.SquareImageView
+            android:id="@+id/preview_imageview"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:orientation="vertical"
-            android:paddingTop="4dp"
-            android:paddingBottom="4dp">
+            android:layout_height="0dp"/>
 
-            <ImageView
-                android:id="@+id/preview_imageview"
-                android:background="@color/light_grey"
-                android:layout_width="260dp"
-                android:layout_height="260dp"
-                android:layout_marginBottom="4dp"
-                tools:src="@drawable/ic_person"/>
+        <FrameLayout
+            android:id="@+id/pick_restaurant"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-            <android.support.v7.widget.CardView
-                style="@style/upload_card"
+            <TextView
+                android:id="@+id/restaurant_picker_cta_text"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="4dp">
+                android:layout_height="96dp"
+                android:padding="16dp"
+                android:gravity="center"
+                android:text="@string/ask_for_dish_location"
+                android:textColor="@color/gray"
+                android:textSize="17sp"/>
 
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="4dp"
-                    android:background="@android:color/transparent"
-                    android:hint="Looks good! What's this dish called?"
-                    android:minLines="1"
-                    android:maxLines="1"
-                    android:textSize="18sp"
-                    android:textColorHint="@color/light_grey"/>
-            </android.support.v7.widget.CardView>
+            <include
+                layout="@layout/places_cell"
+                android:visibility="gone"/>
+        </FrameLayout>
 
-            <android.support.v7.widget.CardView
-                style="@style/upload_card"
-                android:id="@+id/restaurant_section"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@+id/restaurant_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="60dp"
-                    android:gravity="center"
-                    android:text="Where did you get it?"
-                    android:textColor="@color/light_grey"
-                    android:textSize="18sp"/>
-            </android.support.v7.widget.CardView>
-        </LinearLayout>
-    </ScrollView>
-</RelativeLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/gray_300"/>
+    </LinearLayout>
+</ScrollView>
