--- a/app/src/main/res/values/upload_strings.xml
+++ b/app/src/main/res/values/upload_strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="ask_for_dish_location">
-        That looks delicious! Where did you get it?
-    </string>
+    <string name="ask_for_dish_title">What is this dish called?</string>
+    <string name="ask_for_dish_location">Where did you get it?</string>
+    <string name="next">Next</string>
 </resources>
