--- a/app/src/main/res/layout/required_dish_info.xml
+++ b/app/src/main/res/layout/required_dish_info.xml
@@ -69,7 +69,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/gray"/>
+                android:background="@color/gray_300"/>
 
             <FrameLayout
                 android:id="@+id/pick_restaurant"
@@ -94,7 +94,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/gray"/>
+                android:background="@color/gray_300"/>
         </LinearLayout>
     </ScrollView>
 
