--- a/app/src/main/res/values/upload_strings.xml
+++ b/app/src/main/res/values/upload_strings.xml
@@ -3,4 +3,15 @@
     <string name="ask_for_dish_title">What is this dish called?</string>
     <string name="ask_for_dish_location">Where did you get it?</string>
     <string name="next">Next</string>
+
+    <string name="confirm_form_exit">Confirm Exit</string>
+    <string name="confirm_form_exit_body">
+        Are you sure you want to exit?
+        Your unfinished post will be discarded.
+    </string>
+
+    <string name="no_dish_title_error">Please tell us what this dish is called.</string>
+    <string name="no_dish_location_error">Please tell us where you got this dish.</string>
+
+    <string name="image_file_failed">Unable to create a file to save your dish picture to.</string>
 </resources>
