--- a/app/src/main/res/layout/home_feed.xml
+++ b/app/src/main/res/layout/home_feed.xml
@@ -13,6 +13,15 @@
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/feed_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/toolbar"
+        android:paddingBottom="8dp"
+        android:clipToPadding="false"
+        app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
