--- a/app/src/main/res/drawable/get_it_button_background.xml
+++ b/app/src/main/res/drawable/get_it_button_background.xml
@@ -3,7 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/facebook_blue"/>
-
-    <corners android:radius="30dp"/>
+    <solid android:color="@color/blue"/>
+    <corners android:radius="4dp"/>
 </shape>
