--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -57,4 +57,17 @@
         <item name="android:foreground">?android:attr/selectableItemBackground</item>
         <item name="android:background">@color/app_red</item>
     </style>
+
+    <style name="dish_form_input">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/dark_gray</item>
+        <item name="android:textSize">17dp</item>
+        <item name="android:background">@null</item>
+        <item name="android:paddingTop">16dp</item>
+        <item name="android:paddingBottom">16dp</item>
+        <item name="android:paddingLeft">16dp</item>
+        <item name="android:paddingRight">16dp</item>
+        <item name="android:imeOptions">actionDone</item>
+    </style>
 </resources>
